--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-    "jsx-loader": "~0.9.0",
     "css-loader": "~0.6.12",
-    "less-loader": "~0.7.2",
-    "less": "~1.7.0",
-    "style-loader": "~0.6.3",
     "envify": "~1.2.1",
-    "react": "~0.10.0",
-    "superagent": "~0.17.0",
+    "jquery": "~2.1.0",
+    "jsx-loader": "~0.9.0",
+    "less": "~1.7.0",
+    "less-loader": "~0.7.2",
     "lodash": "~2.4.1",
-    "jquery": "~2.1.0"
+    "react": "~0.10.0",
+    "style-loader": "~0.6.3",
+    "superagent": "~0.17.0",
+    "webpack": "^4.19.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "webpack-cli": "^3.1.0",
+    "webpack-command": "^0.4.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
